--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
         font-family: sans-serif;
         text-align: center;
       }
+      a {
+        color: rgb(167, 1, 78);
+        text-decoration: unset;
+      }
+
+      a:hover {
+        text-decoration: underline;
+      }
     </style>
     <title>100DaysDev</title>
   </head>
