external css and link tag in html

--- a/index.html
+++ b/index.html
@@ -1,31 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      p {
-        color: #4343ab;
-        font-family: sans-serif;
-        text-align: center;
-      }
-      h1 {
-        color: #4343ab;
-        font-family: sans-serif;
-        text-align: center;
-      }
-      a {
-        color: rgb(167, 1, 78);
-        text-decoration: unset;
-      }
-
-      a:hover {
-        text-decoration: underline;
-      }
-    </style>
+    <link href="dailychallenge.css" rel="stylesheet">
     <title>100DaysDev</title>
   </head>
   <body>
     <h1>Satya's challenge Friday, 3rd December</h1>
-    <p>Learn basics of HTML and CSS</p>
+    <p id="today-challenge">Learn basics of HTML and CSS</p>
     <p>
       I will dive deeper with
       <a href="http://google.com">more learning resources</a>
