more css on image, body

--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href="dailychallenge.css" rel="stylesheet">
-    <title>100DaysDev</title>
-  </head>
-  <body>
-    <h1>Satya's challenge Friday, 3rd December</h1>
-    <p id="today-challenge">Learn basics of HTML and CSS</p>
-    <p>
-      I will dive deeper with
-      <a href="http://google.com">more learning resources</a>
-    </p>
-  </body>
+
+<head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Oswald&display=swap"
+    rel="stylesheet">
+  <link href="dailychallenge.css" rel="stylesheet">
+  <title>100DaysDev</title>
+</head>
+
+<body>
+  <img src="challenges-trophy.jpg">
+  <h1>Satya's challenge Friday, 3rd December</h1>
+  <p id="today-challenge">Learn basics of HTML and CSS</p>
+  <p>
+    I will dive deeper with
+    <a href="http://google.com">more learning resources</a>
+  </p>
+</body>
+
 </html>
