adding second html and shared css

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <h1>Satya's challenge Friday, 3rd December</h1>
   <p id="today-challenge">Learn basics of HTML and CSS</p>
   <p>
-    I will dive deeper with
-    <a href="http://google.com">more learning resources</a>
+    Explore the 
+    <a href="weekly-challenge.html">full week</a>
   </p>
 </body>
 
