css box model and comibnators

--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 
 <body>
   <img src="challenges-trophy.jpg">
-  <h1>Satya's challenge Friday, 3rd December</h1>
-  <p id="today-challenge">Learn basics of HTML and CSS</p>
-  <p>
-    Explore the 
-    <a href="weekly-challenge.html">full week</a>
-  </p>
+  <h1>Satya's challenge Saturday, 8th Jan 2022</h1>
+  <ol>
+    <li>Learn basics of HTML and CSS</li>
+    <li>
+      Explore the
+      <a href="weekly-challenge.html">full week</a>
+    </li>
+  </ol>
 </body>
 
 </html>
