--- a/weekly-challenge.html
+++ b/weekly-challenge.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="shared.css">
-    <link rel="stylesheet" href="weekly-challenge.css">
-    <meta charset="UTF-8">
+  <head>
+    <link rel="stylesheet" href="shared.css" />
+    <link rel="stylesheet" href="weekly-challenge.css" />
+    <meta charset="UTF-8" />
     <title>Upcoming challenge</title>
-</head>
-<body>
-    <table>
-        <tr>
-        <td></td>
-        <td colspan="5">
-            <h1>Challenges for this week</h1>
-        </td>
-        <td colspan="2">
-            <a href="index.html">Home Page</a>
-        </td>
-        </tr>
-    </table>
-    <p>Learn HTML elements - table, list, dropdowns, text area, text</p>
-    <p>More about CSS - colors, broders, margins</p>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <h1>Challenges for this week</h1>
+      <p id="description">These are my goals for next few days</p>
+      <a href="index.html">View today's Challenge</a>
+    </header>
+    <main>
+      <ol>
+        <li>
+          <h2>Monday, 10th Jan</h2>
+          <p>Learn HTML elements - table, list, dropdowns, text area, text</p>
+        </li>
+        <li>
+          <h2>Tuesday, 11th Jan</h2>
+          <p>More about CSS - colors, broders, margins</p>
+        </li>
+        <li>
+          <h2>Wednesday, 12th Jan</h2>
+          <p>Learn more about forms</p>
+        </li>
+        <li>
+          <h2>Thursday, 12th Jan</h2>
+          <p>Learn more about advanced HTML and CSS</p>
+        </li>
+      </ol>
+    </main>
+  </body>
 </html>
