use of display property for inline element to add block with margin property

--- a/weekly-challenge.html
+++ b/weekly-challenge.html
@@ -22,11 +22,11 @@
           <h2>Tuesday, 11th Jan</h2>
           <p>More about CSS - colors, broders, margins</p>
         </li>
-        <li>
+        <li class="highlightGoal">
           <h2>Wednesday, 12th Jan</h2>
           <p>Learn more about forms</p>
         </li>
-        <li>
+        <li class="highlightGoal">
           <h2>Thursday, 12th Jan</h2>
           <p>Learn more about advanced HTML and CSS</p>
         </li>
